--- a/content/_index.html
+++ b/content/_index.html
@@ -54,11 +54,12 @@ tools.</p>
 <h2>Target Audience</h2>
 <p>While the contents of this site will be written in an academic context, the
 main audience is for current and future practitioners. In other words, anyone
-who happened to stumble this site from a search engine. This isn’t only about
+who stumbled upon this site through a search engine. This isn’t only about
 getting a job done but more so of having the “what else can I do with this” mindset.
 That’s how innovation comes to fruition; applying the same tools to different
-things and experimenting. The goal at hand is so that a high school graduate at
-minimum could unleash the creativity in their mind with operations research at
+things and experimenting. For instance, there’s plenty of research done on airline
+routing but what about ships or drones? The goal at hand is so that a high school
+graduate at minimum could unleash their creativity with operations research at
 their disposal.</p>
 </div>
 <div id="topics-covered" class="section level2">
@@ -69,10 +70,11 @@ their disposal.</p>
 <li>Integer Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-kruk2018" role="doc-biblioref">Kruk</a> (<a href="#ref-kruk2018" role="doc-biblioref">2018</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
 <li>Nonlinear Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span></li>
 <li>Stochastic Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Probability and Statistics: <span class="citation"><a href="#ref-discover2012" role="doc-biblioref">Field, Miles, and Field</a> (<a href="#ref-discover2012" role="doc-biblioref">2012</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span>, <span class="citation"><a href="#ref-kochenderfer2021" role="doc-biblioref">Kochenderfer, Wheeler, and Wray</a> (<a href="#ref-kochenderfer2021" role="doc-biblioref">2021</a>)</span></li>
+<li>Forecasting: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
 <li>Dynamic Programming, Queuing Theory, and Simulations: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span></li>
 <li>Combinatorial Optimization: <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
 <li>Global Optimization</li>
+<li>Probability and Statistics: <span class="citation"><a href="#ref-discover2012" role="doc-biblioref">Field, Miles, and Field</a> (<a href="#ref-discover2012" role="doc-biblioref">2012</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span>, <span class="citation"><a href="#ref-kochenderfer2021" role="doc-biblioref">Kochenderfer, Wheeler, and Wray</a> (<a href="#ref-kochenderfer2021" role="doc-biblioref">2021</a>)</span></li>
 </ul>
 </div>
 <div id="references" class="section level2 unnumbered">
@@ -122,6 +124,6 @@ Yoshida, Ruriko. 2021. <em>Linear Algebra and Its Applications with <span>R</spa
 <ol>
 <li id="fn1"><p><span class="citation"><a href="#ref-chapman_tony_gatewood_clive_2016" role="doc-biblioref">Chapman et al.</a> (<a href="#ref-chapman_tony_gatewood_clive_2016" role="doc-biblioref">2016</a>)</span> for an overview of the supply chain industry.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
 <li id="fn2"><p><span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span> would be the best book to pick up Python for mathematical applications.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
-<li id="fn3"><p>Gurobi has a <a href="Gurobi%20Optimizer%20Quick%20Start%20Guide%20V9.0.pdf">quick start guide</a>.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p>Gurobi has a <a href="">quick start guide</a>.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
