--- a/content/_index.html
+++ b/content/_index.html
@@ -70,10 +70,9 @@ their disposal.</p>
 <li>Integer Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-kruk2018" role="doc-biblioref">Kruk</a> (<a href="#ref-kruk2018" role="doc-biblioref">2018</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
 <li>Nonlinear Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span></li>
 <li>Stochastic Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Forecasting: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
+<li>Forecasting: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hanck2020" role="doc-biblioref">Hanck et al.</a> (<a href="#ref-hanck2020" role="doc-biblioref">2020</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span></li>
 <li>Dynamic Programming, Queuing Theory, and Simulations: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span></li>
 <li>Combinatorial Optimization: <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Global Optimization</li>
 <li>Probability and Statistics: <span class="citation"><a href="#ref-discover2012" role="doc-biblioref">Field, Miles, and Field</a> (<a href="#ref-discover2012" role="doc-biblioref">2012</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span>, <span class="citation"><a href="#ref-kochenderfer2021" role="doc-biblioref">Kochenderfer, Wheeler, and Wray</a> (<a href="#ref-kochenderfer2021" role="doc-biblioref">2021</a>)</span></li>
 </ul>
 </div>
@@ -94,6 +93,9 @@ Gass, Saul I., and Arjang Assad. 2005. <em>An Annotated Timeline of Operations R
 </div>
 <div id="ref-halvorsen_2020" class="csl-entry">
 Halvorsen, Hans-Peter. 2020. <em>Python for Science and Engineering</em>. Halvorsen.
+</div>
+<div id="ref-hanck2020" class="csl-entry">
+Hanck, Christoph, Martin Arnold, Alexander Gerber, and Martin Schmelzer. 2020. <em>Introduction to Econometrics with <span>R</span></em>. bookdown.
 </div>
 <div id="ref-hyndman_athanasopoulos_2021" class="csl-entry">
 Hyndman, Rob J., and George Athanasopoulos. 2021. <em>Forecasting: Principles and Practice</em>. 3rd ed. OTexts.
