--- a/content/_index.html
+++ b/content/_index.html
@@ -12,11 +12,11 @@ bibliography: references.bib
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="the-techdoc-is-a-hugo-theme-for-technical-documentation" class="section level1">
-<h1>The Techdoc is a Hugo Theme for technical documentation</h1>
+<div id="background-information" class="section level1">
+<h1>Background Information</h1>
 <p>For those who aren’t familiar with operations research (OR), OR is the mathematical
 modeling used to find the best solution out of many to support better decision
-making. <span class="citation"><a href="#ref-gass_assad_2005" role="doc-biblioref">Gass and Assad</a> (<a href="#ref-gass_assad_2005" role="doc-biblioref">2005</a>)</span> dates the prominence of OR back to its military origins
+making. The prominence of OR back to its military origins
 during WWI and WWII. Scientists worked with the British Royal Navy, the
 British Royal Air Force (RAF), the British Admiralty, and the US Armed Forces to
 accomplish notable feats such as:</p>
@@ -52,71 +52,32 @@ tools.</p>
 </div>
 <div id="target-audience" class="section level2">
 <h2>Target Audience</h2>
-<p>While the contents of this site will be written in an academic context, the
-main audience is for current and future practitioners. In other words, anyone
-who stumbled upon this site through a search engine. This isn’t only about
-getting a job done but more so of having the “what else can I do with this” mindset.
-That’s how innovation comes to fruition; applying the same tools to different
-things and experimenting. For instance, there’s plenty of research done on airline
-routing but what about ships or drones? The goal at hand is so that a high school
-graduate at minimum could unleash their creativity with operations research at
-their disposal.</p>
-</div>
-<div id="topics-covered" class="section level2">
-<h2>Topics Covered</h2>
-<ul>
-<li>Linear Algebra: <span class="citation"><a href="#ref-bert_tsit1997" role="doc-biblioref">Bertsimas and Tsitsiklis</a> (<a href="#ref-bert_tsit1997" role="doc-biblioref">1997</a>)</span>, <span class="citation"><a href="#ref-margalit_rabinoff_2019" role="doc-biblioref">Margalit and Rabinoff</a> (<a href="#ref-margalit_rabinoff_2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span>, <span class="citation"><a href="#ref-Yoshida2021" role="doc-biblioref">Yoshida</a> (<a href="#ref-Yoshida2021" role="doc-biblioref">2021</a>)</span></li>
-<li>Linear Programming: <span class="citation"><a href="#ref-bert_tsit1997" role="doc-biblioref">Bertsimas and Tsitsiklis</a> (<a href="#ref-bert_tsit1997" role="doc-biblioref">1997</a>)</span>, <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-kruk2018" role="doc-biblioref">Kruk</a> (<a href="#ref-kruk2018" role="doc-biblioref">2018</a>)</span>, <span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span></li>
-<li>Integer Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-kruk2018" role="doc-biblioref">Kruk</a> (<a href="#ref-kruk2018" role="doc-biblioref">2018</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Nonlinear Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span></li>
-<li>Stochastic Programming: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Forecasting: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hanck2020" role="doc-biblioref">Hanck et al.</a> (<a href="#ref-hanck2020" role="doc-biblioref">2020</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span></li>
-<li>Dynamic Programming, Queuing Theory, and Simulations: <span class="citation"><a href="#ref-winston_2004" role="doc-biblioref">Winston</a> (<a href="#ref-winston_2004" role="doc-biblioref">2004</a>)</span>, <span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span></li>
-<li>Combinatorial Optimization: <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span></li>
-<li>Probability and Statistics: <span class="citation"><a href="#ref-discover2012" role="doc-biblioref">Field, Miles, and Field</a> (<a href="#ref-discover2012" role="doc-biblioref">2012</a>)</span>, <span class="citation"><a href="#ref-syndershen2019" role="doc-biblioref">Synder and Shen</a> (<a href="#ref-syndershen2019" role="doc-biblioref">2019</a>)</span>, <span class="citation"><a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">Hyndman and Athanasopoulos</a> (<a href="#ref-hyndman_athanasopoulos_2021" role="doc-biblioref">2021</a>)</span>, <span class="citation"><a href="#ref-kochenderfer2021" role="doc-biblioref">Kochenderfer, Wheeler, and Wray</a> (<a href="#ref-kochenderfer2021" role="doc-biblioref">2021</a>)</span></li>
-</ul>
+<p>The assumption is that the reader is familiar with calculus<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>, linear algebra<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>, and
+statistics<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>. Nonetheless, anyone who stumbled upon this site through a search engine
+will be able to pick the content up. This isn’t merely about getting a job done
+but more so of having the “what else can I do with this” mindset. That’s how
+innovation comes to fruition; applying the same tools to different things and
+experimenting. For instance, there’s plenty of research done on airline routing
+but what about ships or drones? The goal at hand is so that a high school graduate
+at minimum could unleash their creativity with operations research at their disposal.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
 <div id="refs" class="references csl-bib-body hanging-indent">
-<div id="ref-bert_tsit1997" class="csl-entry">
-Bertsimas, Dimitris, and John N. Tsitsiklis. 1997. <em>Introduction to Linear Optimization</em>. Athena Scientific.
-</div>
 <div id="ref-chapman_tony_gatewood_clive_2016" class="csl-entry">
 Chapman, Stephen N., Arnold J R Tony, Ann K. Gatewood, and Lloyd M. Clive. 2016. <em>Introduction to Materials Management</em>. 8th ed. Pearson.
-</div>
-<div id="ref-discover2012" class="csl-entry">
-Field, Andy, Jeremy Miles, and Zoe Field. 2012. <em>Discovering Statistics Using <span>R</span></em>. SAGE Publications.
-</div>
-<div id="ref-gass_assad_2005" class="csl-entry">
-Gass, Saul I., and Arjang Assad. 2005. <em>An Annotated Timeline of Operations Research: An Informal History</em>. Kluwer Academic Publishers.
 </div>
 <div id="ref-halvorsen_2020" class="csl-entry">
 Halvorsen, Hans-Peter. 2020. <em>Python for Science and Engineering</em>. Halvorsen.
 </div>
-<div id="ref-hanck2020" class="csl-entry">
-Hanck, Christoph, Martin Arnold, Alexander Gerber, and Martin Schmelzer. 2020. <em>Introduction to Econometrics with <span>R</span></em>. bookdown.
+<div id="ref-stewart2016" class="csl-entry">
+Stewart, James. 2016. <em>Calculus: Early Transcendentals</em>. 8th ed. Cengage.
 </div>
-<div id="ref-hyndman_athanasopoulos_2021" class="csl-entry">
-Hyndman, Rob J., and George Athanasopoulos. 2021. <em>Forecasting: Principles and Practice</em>. 3rd ed. OTexts.
-</div>
-<div id="ref-kochenderfer2021" class="csl-entry">
-Kochenderfer, Mykel J., Tim A. Wheeler, and Kyle H. Wray. 2021. <em>Algorithms for Decision Making</em>. MIT Press.
-</div>
-<div id="ref-kruk2018" class="csl-entry">
-Kruk, Serge. 2018. <em>Practical Python AI Projects: Mathematical Models of Optimization Problems with Google OR-Tools</em>. Springer.
-</div>
-<div id="ref-margalit_rabinoff_2019" class="csl-entry">
-Margalit, Dan, and Joseph Rabinoff. 2019. <em>Interactive Linear Algebra</em>. Georgia Tech.
-</div>
-<div id="ref-syndershen2019" class="csl-entry">
-Synder, Lawrence V., and Zuo-Jun Max Shen. 2019. <em>Fundamentals of Supply Chain Theory</em>. 2nd ed. Wiley.
+<div id="ref-strang2016" class="csl-entry">
+Strang, Gilbert. 2016. <em>Introduction to Linear Algebra</em>. 5th ed. Wellesley-Cambridge Press.
 </div>
 <div id="ref-winston_2004" class="csl-entry">
 Winston, Wayne L. 2004. <em>Operations Research: Applications and Algorithms</em>. 4th ed. Duxbury Press.
-</div>
-<div id="ref-Yoshida2021" class="csl-entry">
-Yoshida, Ruriko. 2021. <em>Linear Algebra and Its Applications with <span>R</span></em>. Taylor; Francis.
 </div>
 </div>
 </div>
@@ -126,6 +87,10 @@ Yoshida, Ruriko. 2021. <em>Linear Algebra and Its Applications with <span>R</spa
 <ol>
 <li id="fn1"><p><span class="citation"><a href="#ref-chapman_tony_gatewood_clive_2016" role="doc-biblioref">Chapman et al.</a> (<a href="#ref-chapman_tony_gatewood_clive_2016" role="doc-biblioref">2016</a>)</span> for an overview of the supply chain industry.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
 <li id="fn2"><p><span class="citation"><a href="#ref-halvorsen_2020" role="doc-biblioref">Halvorsen</a> (<a href="#ref-halvorsen_2020" role="doc-biblioref">2020</a>)</span> would be the best book to pick up Python for mathematical applications.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
-<li id="fn3"><p>Gurobi has a <a href="">quick start guide</a>.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p>Gurobi has a <a href="Gurobi%20Optimizer%20Quick%20Start%20Guide%20V9.0.pdf">quick start guide</a>.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn4"><p><span class="citation"><a href="#ref-stewart2016" role="doc-biblioref">Stewart</a> (<a href="#ref-stewart2016" role="doc-biblioref">2016</a>)</span> for covering calculus I-III.<a href="#fnref4" class="footnote-back">↩︎</a></p></li>
+<li id="fn5"><p><span class="citation"><a href="#ref-strang2016" role="doc-biblioref">Strang</a> (<a href="#ref-strang2016" role="doc-biblioref">2016</a>)</span> for covering linear algebra.<a href="#fnref5" class="footnote-back">↩︎</a></p></li>
+<li id="fn6"><p><a href="online.stat.psu.edu/statprogram">Penn State Statistics Online</a> for covering
+probability and statistics.<a href="#fnref6" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
